all js now working, need to clean up layout and add css

--- a/index.html
+++ b/index.html
@@ -33,26 +33,28 @@
 			</div>
 			<div class="row">
 				<!-- contains the search function -->
-				<div class="col-md-4">
+				<div class="col-md-12">
 						<form action="input" class = "form-inline">
 								<label for="user-input">Search for your own GIFs Here:</label>
 								<input class="form-control" id="userSelection" type="text">
 								<input class="btn btn-primary" id="submitUserInfo" type="submit" value="Submit">
 							</form>
 				</form>
-
 			</div>
-			<div class="col-md-8">
+			<div class="col-md-12 h3">
 				<h3>Gifs!</h3>
 			</div>
+		</div>
 			<!-- ends the row  -->
-			<div class="row" id = "pushGifs"></div>
-			</div>
-
+			<div class="container" id = "pushGifs">
 			</div>
 		</div>
+			</div>
+		</div>
+	</div>
 	</section>
-</div>
+
+
 	<!-- Link to the local JS -->
 	<script src="assets/javascript/app.js"></script>
 </body>
